artifactory/09-artifactory-statefulset.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: artifactory
  namespace: artifactory
  labels:
    app: artifactory
    type: statefulset
spec:
  serviceName: "artifactory"
  replicas: 1
  selector:
    matchLabels:
      app: artifactory
      type: pod      
  template:
    metadata:
      labels:
        app: artifactory
        type: pod
    spec:
      containers:
      - name: artifactory
        image: docker.bintray.io/jfrog/artifactory-pro:6.0.0
        ports:
        - containerPort: 8081
        volumeMounts:
        - mountPath: "/var/opt/jfrog/artifactory"
          name: config
      volumes:
      - name: config
        persistentVolumeClaim:
          claimName: config
